--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,11 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <!-- <h1>Hello World!</h1>
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    and Electron <script>document.write(process.versions.electron)</script>. -->
+    <script src="node_modules/phaser/dist/phaser.min.js"></script>
+    <script src="scripts/game.js"></script>
   </body>
 </html>
